# sot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  claude_setup_guide.md  pyproject.toml
data/lima/: create_dataset.py  data.csv  router.csv
data/vicuna/: create_dataset.py  data.csv  router.csv
data/wizardlm/: create_dataset.py  data.csv  router.csv
demo/: __init__.py  controller.py  gradio_block_sot_named.py  gradio_web_server.py  gradio_web_server_multi.py  model_worker.py
prompts/: router_gpt4.json  sot_chatgpt.json  sot_claude.json  sot_gpt4.json
scripts/: debug_prompt.sh
scripts/vicuna/dump/: claude_slack_naive.sh  claude_slack_outline.sh  gpt3.5_naive.sh  gpt3.5_outline.sh  gpt4_naive.sh  gpt4_outline.sh  gpt4_router.sh  opensource_naive.py  opensource_outline.py
scripts/vicuna/evaluate/: evaluation_ALL_fastchat_gpt4_birdir.sh  evaluation_ALL_llm_zoo_gpt4_alldir.sh
scripts/wizardlm/dump/: claude_slack_naive.sh  claude_slack_outline.sh  gpt3.5_naive.sh  gpt4_naive.sh  (+5 more)
sot/: fastchat_evaluation_bidir.py  fastchat_evaluation_for_vicuna_bidir.py  llm_zoo_evaluation_alldir.py  main.py  prompt_eng_main.py
sot/evaluation/: llm_evaluation.py
sot/models/: __init__.py  batch_inference.py  claude_slack_model.py  fastchat_model.py  model.py  openai_model.py  register_fastchat.py
sot/schedulers/: __init__.py  naive_scheduler.py  outline_batch_scheduler.py  outline_scheduler.py  router_outline_batch_scheduler.py  scheduler.py
sot/train/: confusion_matrix.py  offline_prepare_router_data.py  train_router.py
sot/utils/: __init__.py  logging.py
(+1 files in other folders)
